--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@ html {
   text-align: center;
 }
 
-.modal {
+.modal-content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,11 +17,21 @@ html {
   border: 2px solid black;
   border-radius: 10px;
   position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.modal {
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-background {
@@ -35,6 +45,7 @@ html {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
 }
+
 
 .login-form {
   display: flex;
