--- a/frontend/src/Components/Header/HeaderStyle.css
+++ b/frontend/src/Components/Header/HeaderStyle.css
@@ -15,7 +15,13 @@ header {
 input {
    height: 25px;
    width: 250px;
-   border-radius: 10px;
+   border-radius: 5px;
+}
+
+select {
+   height: 25px;
+   width: 150px;
+   border-radius: 5px;
 }
 
 .profile-button {
@@ -24,7 +30,7 @@ input {
    justify-content: space-around;
    width: 110px;
    height: 42px;
-   border-radius: 15px;
+   border-radius: 5px;
    background: rgba(71, 103, 48, 1);
    color: white;
 }
@@ -43,18 +49,17 @@ input {
    display: flex;
    flex-direction: column;
    align-items: center;
-
    gap: 5px;
    list-style-type: none;
    border: 2px solid grey;
    background: white;
    position: fixed;
-   width: 100px;
-   top: 100px;
+   width: 106px;
+   top: 65px;
    right: auto;
    z-index: 1;
-   padding: 10px;
-   border-radius: 15px;
+   padding: 20px 0px;
+   border-radius: 5px;
 }
 
 #profile-button {
@@ -62,5 +67,3 @@ input {
    align-items: center;
    margin-right: 15px;
 }
-
-
