--- a/frontend/src/Components/Header/HeaderStyle.css
+++ b/frontend/src/Components/Header/HeaderStyle.css
@@ -18,6 +18,12 @@ input {
    border-radius: 5px;
 }
 
+#search-bar {
+   height: 25px;
+   width: 250px;
+   border-radius: 5px;
+}
+
 select {
    height: 25px;
    width: 150px;
