--- a/frontend/src/Components/SearchCard/SearchCard.css
+++ b/frontend/src/Components/SearchCard/SearchCard.css
@@ -1,10 +1,24 @@
 .search-card {
    width: fit-content;
-   border: 1px solid black;
+   margin: 20px;
+   padding: 10px;
+   /* border: 1px solid black; */
+}
+
+.search-card>a {
+   color: black;
+   text-decoration: none;
+}
+
+.search-card:hover {
+   background-color: grey;
+   border-radius: 5px;
+   background: rgba(71, 103, 48, .25);
 }
 
 #vendor-photo {
    width: 250px;
+   border-radius: 5px;
 }
 
 #vendor-title {
@@ -14,4 +28,16 @@
 
 #vendor-category {
    display: flex;
+   font-size: medium;
+}
+
+.stars {
+   display: flex;
+   width: fit-content;
+   align-items: center;
+}
+
+#vendor-info {
+   display: flex;
+   justify-content: space-between;
 }
