--- a/frontend/src/Components/LandingPage/LandingPage.css
+++ b/frontend/src/Components/LandingPage/LandingPage.css
@@ -28,3 +28,16 @@
 #landing-page>h2 {
    margin-top: 100px;
 }
+
+#landing-page>button {
+   font-size: large;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 175px;
+   height: 50px;
+}
+
+#landing-page>a {
+   text-decoration: none;
+}
