--- a/frontend/src/Components/LandingPage/LandingPage.css
+++ b/frontend/src/Components/LandingPage/LandingPage.css
@@ -2,7 +2,8 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   background-color: rgba(227, 227, 220, 1);
+   padding-top: 100px;
+   /* background-color: rgba(227, 227, 220, 1); */
 
 }
 
