--- a/frontend/src/Components/Header/MenuStyle.css
+++ b/frontend/src/Components/Header/MenuStyle.css
@@ -2,6 +2,10 @@ h3 {
    margin: 5px;
 }
 
+h3:hover {
+   cursor: pointer;
+}
+
 .profile-button {
    display: flex;
    align-items: center;
@@ -17,6 +21,10 @@ h3 {
    display: flex;
    align-items: center;
    margin-right: 15px;
+}
+
+.profile-button:hover {
+   cursor: pointer;
 }
 
 .profile-dropdown.hidden {
