--- a/frontend/src/Components/LandingPage/LandingPage.css
+++ b/frontend/src/Components/LandingPage/LandingPage.css
@@ -3,6 +3,7 @@
    flex-direction: column;
    align-items: center;
    padding-top: 100px;
+   padding-bottom: 100px;
    /* background-color: rgba(227, 227, 220, 1); */
 
 }
