--- a/frontend/src/Components/VendorPage/styling.css
+++ b/frontend/src/Components/VendorPage/styling.css
@@ -3,3 +3,10 @@
    padding-bottom: 100px;
    min-height: 900PX;
 }
+
+#review-form-popup>span {
+   display: flex;
+   margin-left: 20px;
+   padding-left: 10px;
+   cursor: pointer;
+}
