--- a/frontend/src/Components/Header/MenuStyle.css
+++ b/frontend/src/Components/Header/MenuStyle.css
@@ -5,6 +5,7 @@ h3 {
 .menu-item:hover {
    cursor: pointer;
    background: rgba(71, 103, 48, .25);
+   border-radius: 5px;
 
 }
 
@@ -14,7 +15,7 @@ h3 {
    justify-content: space-around;
    width: 110px;
    height: 42px;
-   border-radius: 5px;
+   border-radius: 10px;
    background: rgba(71, 103, 48, 1);
    color: white;
 }
@@ -42,14 +43,11 @@ h3 {
    border: 2px solid grey;
    background: white;
    position: absolute;
-   width: 106px;
+   min-width: 106px;
+   max-width: 200px;
    top: 65px;
    right: 35px;
    z-index: 1;
-   padding: 20px 0px;
-   border-radius: 5px;
-}
-
-#menu-items-container {
-   width: fit-content;
+   padding: 20px 5px;
+   border-radius: 10px;
 }
