--- a/frontend/src/Components/LandingPage/LandingPage.css
+++ b/frontend/src/Components/LandingPage/LandingPage.css
@@ -1,4 +1,5 @@
 #landing-page {
+   text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -24,6 +25,7 @@
 }
 
 #slogan {
+
    font-size: xxx-large;
    width: 750px;
    margin-top: 100px;
