--- a/frontend/src/Components/Favorite/favoriteStyles.css
+++ b/frontend/src/Components/Favorite/favoriteStyles.css
@@ -6,7 +6,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 55px;
     text-shadow: 3px 3px 10px black;
-    color: white;
+    color: rgb(254, 254, 254);
+    text-align: center;
 }
 
 .shopname{
