--- a/frontend/src/Components/Favorite/favoriteStyles.css
+++ b/frontend/src/Components/Favorite/favoriteStyles.css
@@ -1,8 +1,10 @@
 .favoriteList {
     padding-top: 100px;
+    padding-bottom: 100px;
+    min-height: 900px;
 }
 
-.title{
+.title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 55px;
     text-shadow: 3px 3px 10px black;
@@ -10,31 +12,31 @@
     text-align: center;
 }
 
-.shopname{
+.shopname {
     font-size: 40px;
     text-align: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
-.description{
+.description {
     text-align: justify;
     padding-bottom: 60px;
     padding-left: 80px;
     padding-right: 80px;
     padding-top: 15px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .format {
-  width: 200px;
-  justify-content: left;
-  display: flex;
-  padding-left: 100px;
-  padding-top: 50px;
-  
+    width: 200px;
+    justify-content: left;
+    display: flex;
+    padding-left: 100px;
+    padding-top: 50px;
+
 }
 
-.key{
+.key {
     display: flex;
     background-color: rgb(19, 75, 27);
     border-radius: 20px;
@@ -44,4 +46,6 @@
     color: white;
 }
 
-
+#no-fav {
+    text-align: center;
+}
