--- a/frontend/src/Components/VendorPage/styling.css
+++ b/frontend/src/Components/VendorPage/styling.css
@@ -7,7 +7,71 @@
 
 #review-form-popup>span {
    display: flex;
-   margin-left: 20px;
+   margin-left: 200px;
    padding-left: 10px;
    cursor: pointer;
+}
+
+.logo{
+    width: 350px;
+    height: 350px;
+    display: flex;
+    padding-left: 100px;
+    /* padding-top: 200px; */
+}
+
+.shopName{
+   font-size: 30px;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} 
+
+#top-half{
+   display: flex;
+   margin-top: 10px;
+   margin-bottom: 15px;
+}
+
+
+.back{
+   margin-left: 30px;
+   margin-top: 15px;
+   margin-bottom: 15px;
+   width: fit-content;
+   border: 3px solid black;
+   border-radius: 9px;
+   background: rgba(71, 103, 48, .75);
+   padding: 5px;
+   
+}
+
+.top-right{
+   display: flex;
+   flex-direction: column;
+   /* width: 500px; */
+}
+#a-link{
+   text-decoration: underline;
+   color: rgb(85, 153, 37);
+
+}
+.top-left {
+   display: flex;
+   flex-direction: column;
+   /* width: 500px; */
+}
+
+.reviews{
+   padding-left: 5px;
+   padding-right: 5px;
+   border: 3px solid black;
+   border-radius: 20px;
+   margin-left: 88px;
+   margin-right: 88px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+   background-color: rgba(209, 187, 162, .25);
+}
+
+#review-form-popup{
+   padding-left: 70px;
 }
