--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,6 +105,10 @@ header {
   margin-top: 10px;
   border-radius: 10px;
   padding: 5px 10px;
+  border-bottom: 2px solid black; 
+  border-right: 1px solid black; 
+  border-top: none;
+  border-left: none;
 }
 
 .submit-button:hover {
