--- a/frontend/src/Components/Header/HeaderStyle.css
+++ b/frontend/src/Components/Header/HeaderStyle.css
@@ -22,6 +22,12 @@ input {
    height: 25px;
    width: 250px;
    border-radius: 5px;
+   background-color: rgba(223, 214, 203, 0.736);
+   border-bottom: 2px solid black;
+   border-right: 1px solid black;
+   border-top: none;
+   border-left: none;
+   padding-left: 7px;
 }
 
 select {
@@ -34,4 +40,15 @@ select {
    color: gray;
    position: relative;
    right: 25px;
+}
+
+.searchSubmit{
+   background-color: rgba(223, 214, 203, 0.736);
+   border-bottom: 2px solid black;
+   border-right: 1px solid black;
+   border-top: none;
+   border-left: none;
+   padding: 3px;
+   margin-left: 5px;
+   border-radius: 5px;
 }
