--- a/frontend/src/Components/ReviewCard/ReviewCard.css
+++ b/frontend/src/Components/ReviewCard/ReviewCard.css
@@ -5,7 +5,6 @@
    margin: 20px;
    padding: 10px;
    gap: 10px;
-   /* border: 1px solid black; */
 }
 
 #title-stars {
@@ -30,4 +29,18 @@
 #review-comment {
    text-align: start;
    margin: 0;
+}
+
+.deleteButton{
+   border-bottom: 2px solid black; 
+    border-right: 1px solid black; 
+    border-top: none;
+    border-left: none;
+    border-radius: 10px;
+    color: white;
+    background: rgb(237, 70, 15, .8);
+    font-size: 10px;
+    cursor: pointer;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 5px;
 }
