--- a/frontend/src/Components/Favorite/favoriteStyles.css
+++ b/frontend/src/Components/Favorite/favoriteStyles.css
@@ -28,11 +28,12 @@
 }
 
 .format {
-    width: 200px;
+    width: 275px;
     justify-content: left;
     display: flex;
-    padding-left: 100px;
-    padding-top: 50px;
+    padding-left: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
 }
 
