--- a/frontend/src/Components/ImageGallery/ImageGallery.scss
+++ b/frontend/src/Components/ImageGallery/ImageGallery.scss
@@ -35,6 +35,7 @@
             height: 100%;
             object-fit: cover;
             object-position: center;
+            border-radius: 15px;
          }
 
          .caption {
