--- a/frontend/src/Components/ImageGallery/ImageGallery.scss
+++ b/frontend/src/Components/ImageGallery/ImageGallery.scss
@@ -1,14 +1,3 @@
-// body {
-//    min-height: 100dvh;
-//    display: flex;
-//    align-items: center;
-//    font-family: "Satoshi", sans-serif;
-//    font-size: var(--lx-text-01);
-//    font-weight: 500;
-//    color: #ffffe6;
-//    background-color: #10100e;
-// }
-
 .carousel-container {
    width: 80%;
    margin: auto;
@@ -16,6 +5,8 @@
    display: flex;
    flex-direction: column;
    gap: var(--lx-gap);
+   margin-top: 50px;
+   margin-bottom: 50px;
 
    .carousel {
       aspect-ratio: 16/9;
@@ -57,15 +48,16 @@
    }
 
    .btn {
-      padding: 1em 2em;
+      padding: 10px 22px;
       position: absolute;
       transform: translateY(-50%);
       top: 50%;
       outline: none;
       border: none;
+      border-radius: 50px;
       cursor: pointer;
       text-transform: uppercase;
-      font-size: 12px;
+      font-size: xx-large;
       font-weight: 900;
       color: #10100e;
       background-color: #ffffe6;
@@ -90,12 +82,14 @@
    }
 
    .dots {
+      margin-top: 15px;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 10px;
 
       .dot {
+         border-radius: 50px;
          cursor: pointer;
          height: 10px;
          width: 10px;
