--- a/frontend/src/Components/ImageGallery/ImageGallery.scss
+++ b/frontend/src/Components/ImageGallery/ImageGallery.scss
@@ -30,14 +30,17 @@
          }
 
          .caption {
-            width: 100%;
-            padding: var(--lx-space-01);
+            padding: 10px;
+            width: 75%;
             position: absolute;
             bottom: 0;
+            left: 120px;
             text-transform: uppercase;
             text-align: center;
-            font-size: 12px;
+            font-size: 20px;
+            color: white;
             background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 15px;
          }
 
          &.active {
@@ -59,8 +62,8 @@
       text-transform: uppercase;
       font-size: xx-large;
       font-weight: 900;
-      color: #10100e;
-      background-color: #ffffe6;
+      color: rgba(227, 227, 220, 1);
+      background-color: rgba(71, 103, 48, .75);
       transition: transform 0.2s ease-in-out;
 
       &:active,
@@ -93,7 +96,7 @@
          cursor: pointer;
          height: 10px;
          width: 10px;
-         background-color: #242421;
+         background-color: rgba(71, 103, 48, .75);
          transition: background-color 0.2s ease;
 
          &.active,
