fixed accept prop

--- a/backend/Views/Photos/index.cshtml
+++ b/backend/Views/Photos/index.cshtml
@@ -2,7 +2,7 @@
 @model MyApp.Namespace.indexModel
 @{
    <form>
-      <input type="file" name="file" accept="images/*" />
+      <input type="file" name="file" accept="image/*" />
       @{
          Console.WriteLine("TEST");
       }
